deploy_scripts/K8s/extract_worker.yml
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: extract-worker 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: extract-worker 
  template:
    metadata:
      labels:
        app: extract-worker 
    spec:
      containers:
      - name: extract-worker 
        image: zozonguyen1/extract_worker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: file-claim
            mountPath: /usr/app/tmp
  volumeClaimTemplates:
  - metadata:
      name: file-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
