deploy_scripts/K8s/indexing-1.yml
apiVersion: v1
kind: Service
metadata:
  name: indexing-1 
spec:
  selector:
    app: indexing-1 
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: indexing-1 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: indexing-1 
  template:
    metadata:
      labels:
        app: indexing-1 
    spec:
      containers:
      - name: indexing-1 
        image: zozonguyen/indexing:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 5000
