deploy_scripts/K8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongos 
spec:
  selector:
    app: mongos 
  ports:
  - protocol: "TCP"
    port: 27017 
    targetPort: 27017 
  type: LoadBalancer

---
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: mongos 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mongos 
  template:
    metadata:
      labels:
        app: mongos 
    spec:
      containers:
      - name: mongos 
        image: mongo:4.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: file-claim
            mountPath: /data/db  
  volumeClaimTemplates:
  - metadata:
      name: file-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
