deploy_scripts/K8s/rabbitmq.yml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: NodePort 
  selector:
    app: rabbitmq
  ports:
   - name: rabbitmq-mgmt-port
     protocol: TCP
     port: 15672
     nodePort: 30036
     targetPort: 15672
   - name: rabbitmq-amqp-port
     protocol: TCP
     port: 5672
     nodePort: 30037
     targetPort: 5672

---
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: rabbitmq 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: rabbitmq 
  template:
    metadata:
      labels:
        app: rabbitmq 
    spec:
      containers:
      - name: rabbitmq 
        image: rabbitmq:3-management 
        imagePullPolicy: IfNotPresent
        ports:
            - name: http
              protocol: TCP
              containerPort: 15672
            - name: amqp
              protocol: TCP
              containerPort: 5672 
        volumeMounts:
          - name: file-claim
            mountPath: /data 
  volumeClaimTemplates:
  - metadata:
      name: file-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
