deploy_scripts/K8s/rabbitmq_wrapper.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-wrapper 
spec:
  selector:
    app: rabbitmq-wrapper 
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: rabbitmq-wrapper 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: rabbitmq-wrapper 
  template:
    metadata:
      labels:
        app: rabbitmq-wrapper 
    spec:
      containers:
      - name: rabbitmq-wrapper 
        image: zozonguyen/rabbitmq_wrapper:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
