deploy_scripts/K8s/serving.yml
apiVersion: v1
kind: Service
metadata:
  name: serving 
spec:
  selector:
    app: serving 
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1 
kind: StatefulSet 
metadata:
  name: serving 
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: serving 
  template:
    metadata:
      labels:
        app: serving 
    spec:
      containers:
      - name: serving 
        image: zozonguyen/serving:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: file-claim
            mountPath: /usr/app/files
  volumeClaimTemplates:
  - metadata:
      name: file-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
